--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,6 @@
 :root {
 	--text-color: black;
-	--title-color: #A7A633;
+	--title-color: #a7a633;
 	--background-color: #e1e195;
 }
 
@@ -46,11 +46,11 @@ body {
 			color: var(--text-color);
 			font-size: 14px;
 			outline: 0;
-			transition: border .1s ease;
+			transition: border 0.1s ease;
 			resize: none;
 			border: none;
 
-			&::placeholder  {
+			&::placeholder {
 				color: #b6c1cd;
 			}
 		}
@@ -64,14 +64,13 @@ body {
 	}
 
 	.tickets {
-
 		margin: 0;
 		padding: 0;
 
 		.ticket {
 			overflow: hidden;
-			height: 150px;
-			width: calc(50% - 70px);
+			height: auto;
+			width: calc(100% - 70px);
 			margin: 15px;
 			display: inline-block;
 			padding: 10px 20px;
@@ -92,7 +91,6 @@ body {
 			}
 
 			footer {
-
 				display: flex;
 				justify-content: space-between;
 
