after most before comp

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -56,6 +56,14 @@ body {
 		transition: text-decoration 1s;
 	}
 
+	.page {
+		text-align: center;
+	}
+
+	.page-button {
+		font-size: 20px;
+	}
+
 	header {
 		width: 100%;
 		flex-shrink: 0;
