after comp, all 1, before 34

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -60,6 +60,11 @@ body {
 		text-align: center;
 	}
 
+	.show {
+		color: rgb(45, 0, 243);
+		display: block;
+	}
+
 	.page-button {
 		font-size: 20px;
 	}
